# iggy-streaming-system

./: .bazelrc  .gitignore  BAZEL.md  BUILD.bazel  Cargo.toml  MODULE.bazel  NOTICE  README.md  current.txt  makefile
alias/: BUILD.bazel  README.md
alias/client/: BUILD.bazel
alias/macro/: BUILD.bazel
alias/service/: BUILD.bazel
alias/tool/: BUILD.bazel
images/: README.md
queng_common/: README.md
queng_common/common_config/: BUILD.bazel  Cargo.toml
queng_common/common_config/src/: lib.rs
queng_common/common_config/src/config_types/: endpoint.rs  endpoint_host.rs  metric_config.rs  mod.rs  protocol_type.rs  service_config.rs  service_id.rs  service_type.rs  svc_env_config.rs
queng_common/common_config/tests/: BUILD.bazel  endpoint_host_tests.rs  endpoint_tests.rs  metric_config_tests.rs  mod.rs  protocol_type_tests.rs  service_config_tests.rs  service_id_tests.rs  svc_env_config_tests.rs
queng_common/common_data_bar/: BUILD.bazel  Cargo.toml
queng_common/common_data_bar/src/: data_type.rs  lib.rs  mod.rs  time_resolution.rs
queng_common/common_data_bar/src/ohlcv_bar/: display.rs  getters.rs  mod.rs
queng_common/common_data_bar/src/sampled_bars/: mod.rs
queng_common/common_data_bar/src/trade/: mod.rs
queng_common/common_data_bar/src/trade_bar/: display.rs  getters.rs  mod.rs
queng_common/common_data_bar/tests/: BUILD.bazel  data_type_tests.rs  mod.rs  ohlcv_bar_tests.rs  sampled_bars_tests.rs  time_resolution_tests.rs  trade_bar_tests.rs  trade_tests.rs
queng_common/common_env/: BUILD.bazel  Cargo.toml
queng_common/common_env/src/: environment_type.rs  lib.rs
queng_common/common_env/tests/: BUILD.bazel  environment_type_tests.rs  mod.rs
queng_common/common_errors/: BUILD.bazel  Cargo.toml
queng_common/common_errors/src/: dbgw_error.rs  download_error.rs  init_error.rs  lib.rs  lookup_error.rs  message_client_config_error.rs  message_processing_error.rs  postgres_error.rs  sanitize_error.rs  validation_error.rs
queng_common/common_errors/tests/: BUILD.bazel  dbgw_error_tests.rs  init_error_tests.rs  lookup_error_tests.rs  message_client_config_error_tests.rs  message_processing_error_tests.rs  mod.rs  sanitize_error_tests.rs  validation_error_tests.rs
queng_common/common_exchange/: BUILD.bazel  Cargo.toml
queng_common/common_exchange/src/: account_type.rs  exchange_id.rs  fiat_iso_code.rs  instrument.rs  lib.rs  master_symbol.rs  portfolio_config.rs  security_type.rs  symbol.rs  symbol_id.rs
queng_common/common_exchange/tests/: BUILD.bazel  account_type_tests.rs  exchange_id_tests.rs  fiat_iso_code_tests.rs  instrument_types_tests.rs  master_symbols_tests.rs  mod.rs  portfolio_config_tests.rs  security_type_tests.rs  symbol_id_tests.rs  symbol_tests.rs
queng_common/common_iggy/: BUILD.bazel  Cargo.toml
queng_common/common_iggy/src/: iggy_config.rs  iggy_user.rs  lib.rs
queng_common/common_ims/: BUILD.bazel  Cargo.toml
queng_common/common_ims/src/: iggy_config.rs  integration_config.rs  integration_message_config.rs  integration_type.rs  lib.rs
queng_common/common_ims/tests/: BUILD.bazel  iggy_config_tests.rs  iggy_user_tests.rs  integration_config_tests.rs  integration_message_config_tests.rs  integration_type_tests.rs  mod.rs
queng_common/common_message/: BUILD.bazel  Cargo.toml
queng_common/common_message/src/: ims_data_config.rs  ims_stream_user.rs  ims_tcp_tls_config.rs  lib.rs  message_client_channel.rs  message_client_config.rs
queng_common/common_message/tests/: BUILD.bazel  ims_stream_user_tests.rs  message_client_channel_tests.rs  message_client_config_tests.rs  mod.rs
queng_common/common_platform/: BUILD.bazel  Cargo.toml
queng_common/common_platform/src/: lib.rs
queng_common/common_platform/tests/: BUILD.bazel  mod.rs  platform_type_tests.rs
queng_common/common_sbe_errors/: BUILD.bazel  Cargo.toml
queng_common/common_sbe_errors/src/: client_error.rs  client_error_types.rs  data_error.rs  data_error_types.rs  lib.rs
queng_common/common_sbe_errors/tests/: BUILD.bazel  client_error_tests.rs  client_error_types_tests.rs  data_error_tests.rs  data_error_types_tests.rs  mod.rs
queng_common/common_service/: BUILD.bazel  Cargo.toml
queng_common/common_service/src/: print_utils.rs  shutdown_utils.rs
queng_components/config_manager/: BUILD.bazel  Cargo.toml
queng_components/config_manager/src/: api.rs  config_manager.rs  config_manager_trait.rs  env.rs  error.rs  fields.rs  lib.rs  svc.rs
queng_components/environment_manager/: BUILD.bazel  Cargo.toml  README.md
queng_components/environment_manager/src/: api.rs  env_manager.rs  env_manager_trait.rs  lib.rs  util.rs
queng_components/environment_manager/tests/: BUILD.bazel  env_ci_tests.rs  env_cluster_tests.rs  env_local_tests.rs  env_unknown_tests.rs  mod.rs
queng_extensions/client_error_ext/: BUILD.bazel  Cargo.toml
queng_extensions/client_error_ext/src/: client_error_ext.rs  lib.rs
queng_extensions/client_error_ext/tests/: client_error_ext_tests.rs  mod.rs
queng_extensions/common_data_bar_ext/: BUILD.bazel  Cargo.toml  README.md
queng_extensions/common_data_bar_ext/src/: lib.rs  ohlcv_bar_ext.rs  trade_bar_ext.rs
queng_extensions/common_data_bar_ext/tests/: BUILD.bazel  mod.rs  ohlcv_bar_ext_tests.rs  trade_bar_ext_tests.rs
queng_extensions/cow_ext/: BUILD.bazel  Cargo.toml  README.md
queng_extensions/cow_ext/src/: lib.rs
queng_extensions/cow_ext/tests/: BUILD.bazel  cow_tests.rs  mod.rs
queng_extensions/data_error_ext/: BUILD.bazel  Cargo.toml
queng_extensions/data_error_ext/src/: data_error_ext.rs  lib.rs
queng_extensions/iggy_producer_ext/: BUILD.bazel  Cargo.toml
queng_integration/: specfile.md
queng_macros/: README.md
queng_macros/binance_data_integration_macro/: BUILD.bazel  Cargo.toml  (+2 more)
queng_sbe/: README.md  schema.sbeir
queng_system_ims_config/: README.md
queng_template/: README.md
queng_utils_test/: README.md
scripts/: README.md  build.sh  current.sh  doc.sh  fix.sh  format.sh  lint.sh  release.sh  sbe.sh  test.sh  vendor.sh
target-bzl/: bin  cgp-exploration  out  testlogs
tools/: Readme.md
(+371 files in other folders)
