# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Common
###############################################################################


alias(
    name = "common_data_bar",
    actual = "//queng_common/common_data_bar",
)

alias(
    name = "common_errors",
    actual = "//queng_common/common_errors",
)

alias(
    name = "common_exchange",
    actual = "//queng_common/common_exchange",
)

###############################################################################
# Extensions
###############################################################################

alias(
    name = "common_data_bar_ext",
    actual = "//queng_extensions/common_data_bar_ext",
)

alias(
    name = "cow_ext",
    actual = "//queng_extensions/cow_ext",
)


###############################################################################
# Integration
###############################################################################

# Data Integration
##################

alias(
    name = "binance_core_data_integration",
    actual = "//queng_integration/data/binance_core_data_integration",
)

alias(
    name = "binance_spot_data_integration",
    actual = "//queng_integration/data/binance_spot_data_integration",
)

alias(
    name = "binance_usd_futures_data_integration",
    actual = "//queng_integration/data/binance_usd_futures_data_integration",
)

alias(
    name = "binance_coin_futures_data_integration",
    actual = "//queng_integration/data/binance_coin_futures_data_integration",
)


# Traits
##############

alias(
    name = "trait_data_integration",
    actual = "//queng_integration/traits/trait_data_integration",
)


###############################################################################
# SBE
###############################################################################

alias(
    name = "sbe_bindings",
    actual = "//queng_sbe/sbe_bindings"
)

alias(
    name = "sbe_messages_client",
    actual = "//queng_sbe/sbe_messages_client"
)

alias(
    name = "sbe_messages_control",
    actual = "//queng_sbe/sbe_messages_control"
)

alias(
    name = "sbe_messages_data",
    actual = "//queng_sbe/sbe_messages_data"
)

alias(
    name = "sbe_types",
    actual = "//queng_sbe/sbe_types"
)

alias(
    name = "sbe_utils",
    actual = "//queng_sbe/sbe_utils"
)
