# Make all aliases public by default
package(default_visibility = ["//visibility:public"])


###############################################################################
# Common
###############################################################################

alias(
    name = "common_config",
    actual = "//queng_common/common_config",
)

alias(
    name = "common_data_bar",
    actual = "//queng_common/common_data_bar",
)

alias(
    name = "common_env",
    actual = "//queng_common/common_env",
)

alias(
    name = "common_errors",
    actual = "//queng_common/common_errors",
)

alias(
    name = "common_exchange",
    actual = "//queng_common/common_exchange",
)

alias(
    name = "common_ims",
    actual = "//queng_common/common_ims",
)

alias(
    name = "common_platform",
    actual = "//queng_common/common_platform",
)

alias(
    name = "common_service",
    actual = "//queng_common/common_service",
)

###############################################################################
# Components
###############################################################################

alias(
    name = "config_manager",
    actual = "//queng_components/config_manager",
)

alias(
    name = "environment_manager",
    actual = "//queng_components/environment_manager",
)

###############################################################################
# Extensions
###############################################################################

alias(
    name = "common_data_bar_ext",
    actual = "//queng_extensions/common_data_bar_ext",
)

alias(
    name = "cow_ext",
    actual = "//queng_extensions/cow_ext",
)


###############################################################################
# Integration
###############################################################################

alias(
    name = "binance_coin_futures_data_integration",
    actual = "//queng_integration/data/binance_coin_futures_data_integration",
)

alias(
    name = "binance_coin_futures_testnet_data_integration",
    actual = "//queng_integration/data/binance_coin_futures_testnet_data_integration",
)


alias(
    name = "binance_core_data_integration",
    actual = "//queng_integration/data/binance_core_data_integration",
)

alias(
    name = "binance_spot_data_integration",
    actual = "//queng_integration/data/binance_spot_data_integration",
)

alias(
    name = "binance_spot_testnet_data_integration",
    actual = "//queng_integration/data/binance_spot_testnet_data_integration",
)

alias(
    name = "binance_usd_futures_data_integration",
    actual = "//queng_integration/data/binance_usd_futures_data_integration",
)

alias(
    name = "binance_usd_futures_testnet_data_integration",
    actual = "//queng_integration/data/binance_usd_futures_testnet_data_integration",
)

###############################################################################
# Macros
###############################################################################

alias(
    name = "data_integration_macro",
    actual = "//queng_macros/data_integration_macro",
)

###############################################################################
# Message
###############################################################################

alias(
    name = "message_consumer",
    actual = "//queng_message/message_consumer",
)

alias(
    name = "message_producer",
    actual = "//queng_message/message_producer",
)

alias(
    name = "message_shared",
    actual = "//queng_message/message_shared",
)

alias(
    name = "message_stream",
    actual = "//queng_message/message_stream",
)

###############################################################################
# SBE
###############################################################################

alias(
    name = "sbe_bindings",
    actual = "//queng_sbe/sbe_bindings"
)

alias(
    name = "sbe_messages_client",
    actual = "//queng_sbe/sbe_messages_client"
)

alias(
    name = "sbe_messages_control",
    actual = "//queng_sbe/sbe_messages_control"
)

alias(
    name = "sbe_messages_data",
    actual = "//queng_sbe/sbe_messages_data"
)

alias(
    name = "sbe_types",
    actual = "//queng_sbe/sbe_types"
)

alias(
    name = "sbe_utils",
    actual = "//queng_sbe/sbe_utils"
)

###############################################################################
# Traits
###############################################################################

alias(
    name = "trait_data_integration",
    actual = "//queng_traits/trait_data_integration",
)

alias(
    name = "trait_event_consumer",
    actual = "//queng_traits/trait_event_consumer",
)

alias(
    name = "trait_event_processor",
    actual = "//queng_traits/trait_event_processor",
)


###############################################################################
# Utils Tests
###############################################################################

alias(
    name = "iggy_test_utils",
    actual = "//queng_utils_test/iggy_test_utils",
)