# Make all aliases public by default
package(default_visibility = ["//visibility:public"])


###############################################################################
# Clients
###############################################################################

alias(
    name = "ims_data_client",
    actual = "//queng_system_ims_client/ims_data_client",
)