# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Macros
###############################################################################

alias(
    name = "data_integration_macro",
    actual = "//queng_macros/data_integration_macro",
)