load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "common_config",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "common",
        "common_config",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

rust_doc(
    name = "doc",
    crate = ":common_config",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":common_config",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
