load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "common_env",
    srcs = glob([
        "src/*.rs",
    ]),
    crate_root = "src/lib.rs",
    tags = [
        "common",
        "common_env",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # External crates
    ],
)

rust_doc(
    name = "doc",
    crate = ":common_env",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":common_env",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
